# WrapperProxy

./: .gitignore  CMakeLists.txt  ToDo.txt
Source/: ProxyPlugin.cpp
Source/Lib/File/Stream/: AudioInputStream.cpp  AudioInputStream.h  AudioOutputStream.cpp  AudioOutputStream.h  SharedAudioBuffer.h  sharedMemoryBuffer.cpp  sharedMemoryBuffer.h
Source/Lib/Helper/: PluginInfo.cpp  PluginInfo.h  ToastWindow.cpp  ToastWindow.h
Source/Plugin/: ProxyPlugin.cpp  ProxyPlugin.h
